--- a/index.html
+++ b/index.html
@@ -3,18 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" hruf="style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Forum&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative&display=swap" rel="stylesheet">
     <title>OLD BANK - банк для эстетичных клиентов.</title>
 </head>
 <body>
-    <div class="header">
-        <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint nulla aliquam eaque a. Assumenda maiores doloribus enim voluptate aspernatur impedit?</h1>
+    <main>
+        <div class="header">
+            <h1>OLD BANk</h1>
+            <h2>Главная</h2>
+            <h2>Кредит</h2>
+            <h2>Инвестиции</h2>
+            <h2>Акции</h2>
+            <h2>Еще</h2>
+        </div>
+    <footer class="footer">
+    <div class="footer__container">
+        <div class="footer__section">
+        <h3>О нас</h3>
+        <p>OLD BANK — проект двух друзей, мечтающих сделать финансы эстетичными.</p>
+        </div>
+        <div class="footer__section">
+        <h3>Контакты</h3>
+        <p>email: youremail@example.com</p>
+        <p>тел.: +7 (123) 456‑78‑90</p>
+        </div>
+        <div class="footer__section">
+        <h3>Мы в сети</h3>
+        <p><a href="https://github.com/">GitHub</a></p>
+        </div>
     </div>
-
-    <div class="menu">
-
+    <div class="footer__bottom">
+        <p>© 2025 OLD BANK. Все права защищены.</p>
     </div>
-
-    <div></div>
+    </footer>
+    </main>
 </body>
 </html>
