Сделал слайдер, паралакс для 2 статуй.

--- a/index.html
+++ b/index.html
@@ -12,32 +12,51 @@
     <header class="main">
         <h1 class="logo">OLD BANK</h1>
         <nav class="navigation">
-        <a href="#">Главная</a>
-        <a href="#">Кредит</a>
-        <a href="#">Инвестиции</a>
-        <a href="#">Акции</a>
-        <a href="#">Еще</a>
+            <a href="#">Главная</a>
+            <a href="#">Кредит</a>
+            <a href="#">Инвестиции</a>
+            <a href="#">Акции</a>
+            <a href="#">Еще</a>
         </nav>
     </header>
 
 
     <div class="hero-content">
-        <h2 class="hero-title">OLD BANK</h2>
-        <p class="hero-subtext">Банк для эстетичных клиентов</p>
+        <div class="title-1">
+            <div class="text-animation">
+                <div class="text-container">
+                <div class="text">Добро пожаловать в OLD BANK — где вечная эстетика античности встречается с будущим финансов.</div>
+                <div class="text">Вы в OLD BANK — месте, где роскошь, технологии и традиции создают новый стандарт банковского сервиса.</div>
+                <div class="text">Мысли по-гречески, живи по-современному — выбирай OLD BANK.</div>
+                <div class="text">OLD BANK — не просто банк, а храм вашего финансового величия.</div>
+                </div>
+            </div>
+        </div>
         <div id="men">
-            <img src="images/men.png" width="1680" height:="1280" alt="Statue-men">
+            <img src="images/men.png" width="1680" height:="1280" alt="Statue-women">
         </div>,
     </div>
     </section>
 
     <section class="sec">
-        <h2>Parallax Scrolling Website</h2>
-        <div id="women"></div>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit ducimus maiores quibusdam, impedit tempore labore vel fuga a quidem quod dolorem eaque eius laboriosam iusto consequuntur dolore modi provident? Distinctio cum illum exercitationem praesentium porro nisi aspernatur tenetur consequatur sequi. Veritatis officiis laudantium corrupti porro nostrum? Alias ab a repudiandae aspernatur. Quae minus magnam necessitatibus eaque excepturi maxime quisquam atque ab nemo rerum animi saepe quasi, sint libero alias fugit accusamus at consectetur dolorem, aspernatur dolor? Nemo enim eaque maxime, ut in facilis nulla magnam quasi ab quam perspiciatis consequuntur molestias praesentium quis eos qui assumenda aut, et explicabo facere. Deleniti voluptatum quae nostrum officiis maxime minus earum ab ipsum aliquam ipsa ullam, id placeat tempore, reprehenderit tempora molestias quasi nisi quos iusto delectus, totam optio sapiente quisquam! Ducimus, iusto animi. Excepturi voluptates earum sed, esse odio eos! Quibusdam blanditiis quod quia libero consectetur reprehenderit mollitia ea corporis ipsum commodi officia asperiores consequuntur possimus, unde harum repellat laborum culpa amet voluptas reiciendis. Aperiam eveniet sequi aspernatur reiciendis est necessitatibus ullam atque iure architecto ut error earum voluptate maxime mollitia tempora quibusdam modi quod, inventore eos. Deserunt, sequi! Beatae repudiandae blanditiis, odit accusantium illo placeat! Omnis harum labore non temporibus! Quo incidunt inventore consequatur unde repudiandae consequuntur quis cupiditate reiciendis distinctio! Aperiam facilis nostrum sint amet excepturi corrupti autem ab ipsa! Porro ut, in distinctio maiores dolorem praesentium, ducimus voluptatibus nesciunt quia ad magni eaque cumque id rerum nam? Unde quo dolore deserunt expedita impedit nobis consectetur animi aliquid temporibus numquam?\<br><br>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit ducimus maiores quibusdam, impedit tempore labore vel fuga a quidem quod dolorem eaque eius laboriosam iusto consequuntur dolore modi provident? Distinctio cum illum exercitationem praesentium porro nisi aspernatur tenetur consequatur sequi. Veritatis officiis laudantium corrupti porro nostrum? Alias ab a repudiandae aspernatur. Quae minus magnam necessitatibus eaque excepturi maxime quisquam atque ab nemo rerum animi saepe quasi, sint libero alias fugit accusamus at consectetur dolorem, aspernatur dolor? Nemo enim eaque maxime, ut in facilis nulla magnam quasi ab quam perspiciatis consequuntur molestias praesentium quis eos qui assumenda aut, et explicabo facere. Deleniti voluptatum quae nostrum officiis maxime minus earum ab ipsum aliquam ipsa ullam, id placeat tempore, reprehenderit tempora molestias quasi nisi quos iusto delectus, totam optio sapiente quisquam! Ducimus, iusto animi. Excepturi voluptates earum sed, esse odio eos! Quibusdam blanditiis quod quia libero consectetur reprehenderit mollitia ea corporis ipsum commodi officia asperiores consequuntur possimus, unde harum repellat laborum culpa amet voluptas reiciendis. Aperiam eveniet sequi aspernatur reiciendis est necessitatibus ullam atque iure architecto ut error earum voluptate maxime mollitia tempora quibusdam modi quod, inventore eos. Deserunt, sequi! Beatae repudiandae blanditiis, odit accusantium illo placeat! Omnis harum labore non temporibus! Quo incidunt inventore consequatur unde repudiandae consequuntur quis cupiditate reiciendis distinctio! Aperiam facilis nostrum sint amet excepturi corrupti autem ab ipsa! Porro ut, in distinctio maiores dolorem praesentium, ducimus voluptatibus nesciunt quia ad magni eaque cumque id rerum nam? Unde quo dolore deserunt expedita impedit nobis consectetur animi aliquid temporibus numquam?\<br><br>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit ducimus maiores quibusdam, impedit tempore labore vel fuga a quidem quod dolorem eaque eius laboriosam iusto consequuntur dolore modi provident? Distinctio cum illum exercitationem praesentium porro nisi aspernatur tenetur consequatur sequi. Veritatis officiis laudantium corrupti porro nostrum? Alias ab a repudiandae aspernatur. Quae minus magnam necessitatibus eaque excepturi maxime quisquam atque ab nemo rerum animi saepe quasi, sint libero alias fugit accusamus at consectetur dolorem, aspernatur dolor? Nemo enim eaque maxime, ut in facilis nulla magnam quasi ab quam perspiciatis consequuntur molestias praesentium quis eos qui assumenda aut, et explicabo facere. Deleniti voluptatum quae nostrum officiis maxime minus earum ab ipsum aliquam ipsa ullam, id placeat tempore, reprehenderit tempora molestias quasi nisi quos iusto delectus, totam optio sapiente quisquam! Ducimus, iusto animi. Excepturi voluptates earum sed, esse odio eos! Quibusdam blanditiis quod quia libero consectetur reprehenderit mollitia ea corporis ipsum commodi officia asperiores consequuntur possimus, unde harum repellat laborum culpa amet voluptas reiciendis. Aperiam eveniet sequi aspernatur reiciendis est necessitatibus ullam atque iure architecto ut error earum voluptate maxime mollitia tempora quibusdam modi quod, inventore eos. Deserunt, sequi! Beatae repudiandae blanditiis, odit accusantium illo placeat! Omnis harum labore non temporibus! Quo incidunt inventore consequatur unde repudiandae consequuntur quis cupiditate reiciendis distinctio! Aperiam facilis nostrum sint amet excepturi corrupti autem ab ipsa! Porro ut, in distinctio maiores dolorem praesentium, ducimus voluptatibus nesciunt quia ad magni eaque cumque id rerum nam? Unde quo dolore deserunt expedita impedit nobis consectetur animi aliquid temporibus numquam?\<br><br>
-        </p>
+        <p>Античная мудрость — современные условия.</p>
+        <div id="women">
+            <img src="images/women.png" height:="900" alt="Statue-men">
+        </div>
+        <div class="title-2">
+            <div class="text-animation-2">
+                <div class="text-container-2">
+                    <ul class="text-2">
+                        <li><a href="#">Низкая процентная ставка — фиксированная и без скрытых условий.</a></li>
+                        <li><a href="#">Отсрочка первого платежа — до 3 месяцев каникул.</a></li>
+                        <li><a href="#">Быстрое одобрение — за 15 минут, без лишней бюрократии.</a></li>
+                        <li><a href="#">Без комиссии за досрочное погашение.</a></li>
+                        <li><a href="#">Персональный менеджер на весь срок кредита.</a></li>
+                        <li><a href="#">Бесплатное годовое обслуживание счёта и карты.</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </section>
 
     <footer class="footer">
