Добавил 2 новые секции

--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
         </div>
         <div id="men">
             <img src="images/men.png" width="1680" height:="1280" alt="Statue-women">
-        </div>,
+        </div>
     </div>
     </section>
 
-    <section class="sec">
+    <section class="credit">
         <p>Античная мудрость — современные условия.</p>
         <div id="women">
-            <img src="images/women.png" height:="900" alt="Statue-men">
+            <img src="images/women.png" height:="900" alt="Statue-women">
         </div>
         <div class="title-2">
             <div class="text-animation-2">
@@ -53,6 +53,48 @@
                         <li><a href="#">Без комиссии за досрочное погашение.</a></li>
                         <li><a href="#">Персональный менеджер на весь срок кредита.</a></li>
                         <li><a href="#">Бесплатное годовое обслуживание счёта и карты.</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="investition">
+        <p>OLD BANK: где инвестиции становятся наследием.</p>
+        <div id="men-2">
+            <img src="images/men-2.png" height="1440" alt="Statue-men">
+        </div>
+        <div class="title-3">
+            <div class="text-animation-3">
+                <div class="text-container-3">
+                    <ul class="text-3">
+                        <li><a href="#">Наследие прошлого. Прибыль настоящего. Рост в будущем.</a></li>
+                        <li><a href="#">Инвестируйте с умом, стилем и стратегией.</a></li>
+                        <li><a href="#">Вечные ценности. Актуальные решения.</a></li>
+                        <li><a href="#">Прозрачность, стабильность и премиум-подход — основа вашего роста.</a></li>
+                        <li><a href="#">Инвестиции, в которых чувствуешь силу и уверенность.</a></li>
+                        <li><a href="#">Точная стратегия. Личный подход. Максимальная отдача.</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="acsii">
+        <p>Акции OLD BANK — инвестиция в устойчивость, стиль и силу бренда.</p>
+        <div id="women-2">
+            <img src="images/women-2.png" height="1440" alt="Statue-women">
+        </div>
+        <div class="title-4">
+            <div class="text-animation-4">
+                <div class="text-container-4">
+                    <ul class="text-4">
+                        <li><a href="#">Акции OLD BANK растут вместе с доверием к бренду.</a></li>
+                        <li><a href="#">Вы инвестируете в стабильность и престиж.</a></li>
+                        <li><a href="#">Минимальные риски — максимальный потенциал.</a></li>
+                        <li><a href="#">Доля в банке — доля в будущем.</a></li>
+                        <li><a href="#">Акции, за которыми стоит стратегия и стиль.</a></li>
+                        <li><a href="#">Покупка сегодня — капитал завтра</a></li>
                     </ul>
                 </div>
             </div>
