Переделал footer и header, допилил функционал

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative&display=swap" rel="stylesheet">
     <title>OLD BANK - банк для эстетичных клиентов.</title>
 </head>
-    <section class="hero">
+    <section id="hero">
     <header class="main">
         <h1 class="logo">OLD BANK</h1>
         <nav class="navigation">
-            <a href="#">Главная</a>
-            <a href="#">Кредит</a>
-            <a href="#">Инвестиции</a>
-            <a href="#">Акции</a>
-            <a href="#">Еще</a>
+            <a href="#hero">Главная</a>
+            <a href="#credit">Кредит</a>
+            <a href="#investition">Инвестиции</a>
+            <a href="#acsii">Акции</a>
+            <a href="#footer">О нас</a>
         </nav>
     </header>
 
@@ -38,7 +38,7 @@
     </div>
     </section>
 
-    <section class="credit">
+    <section id="credit">
         <p>Античная мудрость — современные условия.</p>
         <div id="women">
             <img src="images/women.png" height:="900" alt="Statue-women">
@@ -59,10 +59,10 @@
         </div>
     </section>
 
-    <section class="investition">
+    <section id="investition">
         <p>OLD BANK: где инвестиции становятся наследием.</p>
         <div id="men-2">
-            <img src="images/men-2.png" height="1440" alt="Statue-men">
+            <img src="images/men-2.png" height="1680" alt="Statue-men">
         </div>
         <div class="title-3">
             <div class="text-animation-3">
@@ -80,10 +80,10 @@
         </div>
     </section>
 
-    <section class="acsii">
+    <section id="acsii">
         <p>Акции OLD BANK — инвестиция в устойчивость, стиль и силу бренда.</p>
         <div id="women-2">
-            <img src="images/women-2.png" height="1440" alt="Statue-women">
+            <img src="images/women-2.png" height="1680" alt="Statue-women">
         </div>
         <div class="title-4">
             <div class="text-animation-4">
@@ -101,11 +101,11 @@
         </div>
     </section>
 
-    <footer class="footer">
+    <footer id="footer">
     <div class="footer__container">
         <div class="footer__section">
         <h3>О нас</h3>
-        <p>OLD BANK — проект двух друзей, мечтающих сделать финансы эстетичными.</p>
+        <p>OLD BANK — проект двух друзей, вдохновлённых идеей изменить представление о банках. Мы создали пространство, где финансы сочетаются с эстетикой, прозрачностью и уважением к клиенту. Для нас банк — это не просто про деньги, а про стиль жизни, уверенность и личную философию. Мы верим, что современный сервис может быть честным, красивым и выгодным одновременно.</p>
         </div>
         <div class="footer__section">
         <h3>Контакты</h3>
